--- a/web/css/overview.css
+++ b/web/css/overview.css
@@ -26,7 +26,7 @@
 }
 
 #addAppointment{
-    display: none;
+    display: block;
 }
 
 #notRepeating{
@@ -53,7 +53,7 @@
     cursor: pointer;
 }
 #overviewMenu div[selectedDiv = "true"]{
-    background-color: #979797;
+    background-color: #5579d1;
 }
 #overviewMenu div[selectedDiv = "true"]:hover{
     background-color: #727272;
@@ -70,4 +70,8 @@ table{
 
 tr * {
     text-align: center;
+}
+
+.delete:hover{
+    cursor: pointer;
 }
