--- a/web/css/overview.css
+++ b/web/css/overview.css
@@ -10,6 +10,7 @@
 .day div{
     position: relative;
     top: 6px;
+    width: 30px;
     color: white;
     text-align: center;
 }
@@ -23,10 +24,65 @@
 
 #repeating{
     display: block;
+    margin: auto;
+    width: 280px;
 }
 
-#addAppointment{
-    display: block;
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.28);
+    display: none;
+}
+
+#checkbox{
+    width: 280px;
+    background-color: grey;
+    margin: auto;
+    text-align: center;
+}
+
+#checkbox:hover{
+    cursor: pointer;
+}
+
+#sendAppointment{
+    width: 280px;
+    text-align: center;
+}
+.button{
+    width: 280px;
+    margin: auto;
+}
+.inputContainer div div{
+    display: inline-block;
+}
+
+
+.input{
+    width: 310px;
+    margin: auto;
+}
+.input div{
+    width: 100px;
+}
+.input input{
+    width: 200px;
+    text-align: center;
+}
+
+.inputContainer{
+    width: 50%;
+    height: 50%;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    border: solid black;
+    background-color: #51caff;
 }
 
 #notRepeating{
@@ -65,6 +121,7 @@
 }
 
 table{
+    border-top: 1px solid black;
     width: 100%;
 }
 
@@ -75,3 +132,4 @@ tr * {
 .delete:hover{
     cursor: pointer;
 }
+
