--- a/web/css/overview.css
+++ b/web/css/overview.css
@@ -120,9 +120,27 @@
     border-bottom: 1px solid black;
 }
 
-table{
-    border-top: 1px solid black;
+#taskTable .task{
+    background-image: -webkit-radial-gradient(closest-side, rgb(103, 60, 255) 0, rgb(183, 152, 255) 75%, rgba(194, 189, 244, 0.5) 88%, rgba(255, 255, 255, 0.16) 100%);
+    background-image: -moz-radial-gradient(closest-side, rgb(47, 53, 255) 0, rgb(163, 153, 255) 75%, rgba(175, 163, 244, 0.5) 88%, rgba(255, 255, 255, 0.16) 100%);
+    background-image: radial-gradient(closest-side, rgb(127, 109, 255) 0, rgb(166, 163, 255) 75%, rgba(152, 164, 244, 0.5) 88%,rgba(255, 255, 255, 0.16) 100%);
+    background-color: #6e94ff;
+    display: inline-block;
+    width: 130px;
+    height: 130px;
+    margin: 10px;
+}
+
+#taskTable .task *{
+    display: block;
+    text-align: center;
+    font-size: 30px;
     width: 100%;
+    height: 100%;
+}
+
+#taskTable .task .hidden{
+    display: none;
 }
 
 tr * {
