--- a/web/css/template.css
+++ b/web/css/template.css
@@ -48,16 +48,18 @@ li{
     margin: auto;
     border: 1px solid black;
 }
-table {
+.timeTable {
     margin: auto;
     width: 100%;
     border-bottom: 1px solid black;
     border-collapse: collapse;
 }
 
-table tr{
+#tableHeader div{
+    display: inline-block;
     border-bottom: 1px solid rgba(150, 150, 150, 0.31);
-    margin: -1px;
+    width: calc(100%/8);
+    text-align: center;
 }
 
 table tr th{
@@ -68,14 +70,16 @@ table tr th{
 }
 
 .time{
+    width: 100%;
     height: 29px;
     padding: 0;
     margin: 0;
+    border-bottom: 1px solid black;
 }
 
 .timeHour{
     position: relative;
-    top: 13.75px;
+    top: 19.5px;
     left: 20px;
 }
 
@@ -91,9 +95,9 @@ table tr th{
 .overlay{
     position: absolute;
     left: 12.5%;
-    top: 31px;
+    top: 44.5px;
     width: 87.5%;
-    height: calc(100% - 30px);
+    height: calc(100% - 45px);
 }
 
 .timeElement{
