--- a/web/css/template.css
+++ b/web/css/template.css
@@ -94,6 +94,17 @@ table tr th{
     background-color: rgba(181, 181, 181, 0.18);
 }
 
+#timeDiv{
+    position: absolute;
+    width: calc(100%/7 - 0.5px);
+    height: 3px;
+    background-color: green;
+}
+
+.today{
+    background-color: grey;
+}
+
 .overlay{
     position: absolute;
     left: 12.5%;
